# har-classifier

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/falling/: session1_gyr.csv
data/raw/falling/Acclration sans g fall s1/: Raw Data.csv
data/raw/falling/Acclration sans g fall s1/meta/: time.csv
data/raw/falling/Gyroscope vitesse angulaire fall s1/meta/: time.csv
data/raw/running/: session1_acc.csv  session2_acc.csv  session2_gyr.csv  session3_acc.csv
data/raw/running/Acclration sans g run s2/meta/: time.csv
data/raw/running/Acclration sans g run s3/meta/: time.csv
data/raw/running/Gyroscope vitesse angulaire run s3/: Raw Data.csv
data/raw/sitting/: session3_acc.csv
data/raw/sitting/Acclration sans g sitting s1/: Raw Data.csv
data/raw/sitting/Acclration sans g sitting s1/meta/: time.csv
data/raw/sitting/Acclration sans g sitting s2/: Raw Data.csv
data/raw/sitting/Gyroscope vitesse angulaire sitting s1/: Raw Data.csv
data/raw/sitting/Gyroscope vitesse angulaire sitting s2/: Raw Data.csv
data/raw/sitting/Gyroscope vitesse angulaire sitting s3/: Raw Data.csv
data/raw/walking/: session3_acc.csv  session3_gyr.csv
data/raw/walking/Acclration sans g marche s1/: Raw Data.csv
data/raw/walking/Acclration sans g marche s2/: Raw Data.csv
data/raw/walking/Gyroscope vitesse angulaire marche s2/: Raw Data.csv
models/: dataset.joblib  model.joblib  model.onnx
reports/: report.html  report.md
scripts/: benchmark_latency.py
src/: config.py  data_loading.py  dataset.py  evaluate.py  export_onnx.py  features.py  preprocessing.py  train.py
(+14 files in other folders)
