[project]
name = "har-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "skl2onnx>=1.20.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.16",
]
